syntax = "proto3";

package proto.v1;

option go_package = "./proto/v1/location";

import "google/protobuf/timestamp.proto";

service LocationService {
  rpc UpsertLocation(UpsertLocationRequest) returns (UpsertLocationResponse) {}
  rpc GetLocationByUser(GetLocationByUserRequest) returns (GetLocationByUserResponse) {}
  rpc ListNearby(ListNearbyRequest) returns (ListNearbyResponse) {}
  rpc DeleteMyLocation(DeleteMyLocationRequest) returns (DeleteMyLocationResponse) {}
}

message UserLocation {
  string user_id = 1;
  double latitude = 2;
  double longitude = 3;
  string geohash = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message UpsertLocationRequest {
  double latitude = 1;
  double longitude = 2;
  string geohash = 3;
}
message UpsertLocationResponse {
  UserLocation location = 1;
}

message GetLocationByUserRequest {
  string user_id = 1;
}
message GetLocationByUserResponse {
  UserLocation location = 1;
}

message ListNearbyRequest {
  string geohash_prefix = 1;
  int32 limit = 2;
}
message ListNearbyResponse {
  repeated UserLocation locations = 1;
}

message DeleteMyLocationRequest {}
message DeleteMyLocationResponse {
  bool success = 1;
}
